# ASPIRED

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.rst  CITATION.cff  ISIS.ipynb  ISIS_PSO1801+6254_G93-48.ipynb.REMOVED.git-id  ISIS_PSO1801p6254_G93m48.ipynb.REMOVED.git-id  LICENSE  MANIFEST.in  README.md  SPRAT_2dspec.ipynb  SPRAT_2dspec_AT2019fsw.html  SPRAT_2dspec_AT2019fsw.ipynb  SPRAT_2dspec_BDp33_flux_calibrate.ipynb  SPRAT_2dspec_BLAP09.html  SPRAT_2dspec_BLAP09.ipynb  SPRAT_2dspec_BLAP14.ipynb  SPRAT_2dspec_LHS6328.html  SPRAT_2dspec_LHS6328.ipynb  SPRAT_AT2019fsw.ipynb  SPRAT_BLAP14_Hilt102.ipynb  SPRAT_LHS6328_Hilt102.ipynb  SPRAT_LHS6328_Hilt102.ipynb.REMOVED.git-id  SPRAT_LHS6328_Hilt102_CCtrace.ipynb  SPRAT_standard_Hilt102.ipynb  correlation.py  package.json  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codacy-analysis.yaml  conda-publish.yml  python-package.yml  python-publish.yml
aspired/: __init__.py  aspired.py  correlation.py  flux_calibration.py  fluxcalibration.py  image_reduction.py  onedspec.py  spectral_reduction.py  spectrum1D.py  spectrum_oneD.py  standard.py  standard_list.py  standardlist.py  twodspec.py  util.py  wavelength_calibration.py  wavelengthcalibration.py
aspired/extinction/: cp_atm_extinct.txt  ls_atm_extinct.txt  mk_atm_extinct.txt  orm_atm_extinct.txt
aspired/standards/: README  generate_dictionary.py  lib_to_uname.json  uname_to_lib.json
aspired/telluric/: telluric_optical.txt
conda/: meta.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
examples/: example_01_full_reduction.py  example_02_science_frame_and_arc_only.py  example_03_wavelength_calibrated_science_and_standard_frames_only.py  example_04_user_supplied_trace_for_spectral_extraction.py  example_05_user_supplied_trace_for_arc_extraction.py  example_06_user_supplied_wavelength_polyfit_coefficients.py  example_09_user_supplied_sensitivity_curve.py  example_10_user_supplied_wavelength_calibrated_science_and_standard.py  frodo_LHS6328.list  hiltner102.list  isis_g93m48.list  isis_pso1801p6254.list  lhs6328.list  sprat_BLAP09.list  sprat_Hiltner102.list  sprat_LHS6328.list  test.list  v_e_20180704_32_1_0_2.fits  v_e_20180906_22_1_0_2.fits  v_e_20190522_8_1_0_9.fits  v_s_20180703_65_1_0_2.fits  v_s_20190616_34_1_0_2.fits
examples/Hiltner102_raw/: v_s_20180703_65_1_0_0.fits
examples/LHS6328_raw/: v_e_20180906_22_1_0_0.fits
examples/calibration_files/: v_dark_1.fits  v_dark_2.fits  v_slit_blue_1.fits  v_slit_blue_2.fits
examples/example_output/: example_01_a_full_reduction_adu_0.csv  example_01_a_full_reduction_adu_1.csv  example_01_a_full_reduction_flux_0.csv  example_01_a_full_reduction_flux_1.csv  example_01_a_full_reduction_flux_resampled_0.csv  example_01_a_full_reduction_flux_resampled_1.csv  example_01_a_full_reduction_fluxraw_0.csv  example_01_a_full_reduction_fluxraw_1.csv  example_01_a_full_reduction_standard_adu.csv  example_01_a_science_spectrum_0.html  (+16 more)
other_scripts/: correlation.py  rectification_trial.py
test/: rectification_trial.py  test.py  test_aspired.py  test_extraction.py  test_fluxcal.py  test_forced_extraction.py  test_full_run.py  test_image_reduction.py  test_io.py  test_onedspec.py  test_rectification.py  test_saturated_spectrum.py  test_spectrum1D.py  test_spectrumOneD.py  test_telluric.py  test_twodspec.py  test_util.py  test_wavecal.py
(+362 files in other folders)
