[metadata]
name = aspired
version = 0.4.2
license = BSD-3-Clause
license_files = LICENSE
description = The iraf-free spectral data reduction toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Marco C Lam, Robert J Smith
author_email = lam@tau.ac.il, rjs@ljmu.ac.uk
maintainer = Marco C Lam
maintainer_email = lam@tau.ac.il
url = https://aspired.readthedocs.io/en/latest/?badge=latest
download_url = https://github.com/cylammarco/aspired
classifiers =
    License :: OSI Approved :: BSD-3-Clause
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    astropy>=4.0
    numpy>=1.16
    scipy>=1.5.2
    plotly>=5.1
    astroscrappy>=1.1
    ccdproc>= 2.3
    statsmodels>=0.13
    spectres>=2.1.1
    rascal@git+https://github.com/jveitchmichaelis/rascal@dev
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8
