[metadata]
name = aspired
version = 0.5.0
license = BSD-3-Clause
license_files = LICENSE
description = The iraf-free spectral data reduction toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Marco C Lam, Robert J Smith
author_email = lam@mail.tau.ac.il, r.j.smith@ljmu.ac.uk
maintainer = Marco C Lam
maintainer_email = lam@mail.tau.ac.il
url = https://aspired.readthedocs.io/en/latest/?badge=latest
download_url = https://github.com/cylammarco/aspired
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    astropy>=4.3
    numpy>=1.18
    scipy>=1.7
    plotly>=5.6
    kaleido>=0.2
    astroscrappy>=1.1
    ccdproc>= 2.3
    statsmodels>=0.13
    spectres>=2.1.1
    rascal>=0.3.8.1
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8
    requests>=2.27

[coverage:run]
relative_files = True

[options.packages.find]
where=src